--- a/views/pages/warehouse/awb/create.ejs
+++ b/views/pages/warehouse/awb/create.ejs
@@ -260,7 +260,8 @@
       <div class='form-group'>
         <label for="originBarcode">Origin barcode</label>
         <div class="row">
-          <div class="col-lg-11 col-md-11 col-sm-11">
+          <div class="col-lg-9 col-md-9 col-sm-9">
+
             <%const pbarcode = processBarcode?processBarcode.barcode:'';%>
             <select id="originBarcode" name="originBarcode" class='form-control' required>
               <option></option>
@@ -268,6 +269,10 @@
               <option <%if( pbarcode== barcode.id ){%>selected=="selected"<%}%> value="<%= barcode.barcode+','+barcode.id %>"><%=barcode.barcode%></option>
               <% }) %>
             </select>
+          </div>
+          <div class="input-group-append col-lg-2">
+            <a href="#" id="refreshBarcode" onclick="refreshBarcode()">
+              <span class="input-group-text">Refresh</span></a>
           </div>
           <div class="input-group-append col-lg-1">
             <a href="#" data-toggle="modal" data-target="#add-barcode-popup" onclick="closeAddPackage()">
