--- a/views/pages/warehouse/package/list-all.ejs
+++ b/views/pages/warehouse/package/list-all.ejs
@@ -44,7 +44,7 @@
 
       </div>
       <div class="card-body">
-        <table class="display table table-responsive table-striped table-hover dataTable package-table">
+        <table id = "package-table" class="display table table-responsive table-striped table-hover dataTable package-table">
           <thead>
             <tr>
               <th></th>
