--- a/views/pages/warehouse/package/list.ejs
+++ b/views/pages/warehouse/package/list.ejs
@@ -8,7 +8,7 @@
       </div>
       <div class="card-body">
         <div class="table-responsive">
-          <table class="display table table-striped table-hover dataTable package-table">
+          <table id = "package-table" class="display table table-striped table-hover dataTable package-table">
             <thead>
               <tr>
                 <th>Number</th>
