--- a/views/pages/warehouse/delivery/preview.ejs
+++ b/views/pages/warehouse/delivery/preview.ejs
@@ -31,7 +31,8 @@
                     </div>
                     <div class="separator-solid"></div>
                     <h3 class="card-title text-muted">Packages</h3>
-                    <div class="mt-3">
+                    <div class="mt-3 daterangepickerbody">
+                        <div class="table-responsive">
                         <table class="display table table-striped table-hover dataTable delivery-package-table">
                             <thead>
                                 <tr>
@@ -67,6 +68,7 @@
                                     <% }) %>
                             </tbody>
                         </table>
+                        </div>
                     </div>
                 </div>
             </div>
