--- a/views/pages/warehouse/manifest/clone.ejs
+++ b/views/pages/warehouse/manifest/clone.ejs
@@ -84,7 +84,7 @@
         <div class="d-flex">
           <h3 class="card-title text-muted package-info">Data Entry ( Weight : 0 lbs / 0lbs )</h3>
         </div>
-        <div class='row mt-3'>
+        <div class='row mt-3 daterangepickerbody'>
           <div class='col-md-12 table-responsive'>
             <table id='packageTable' class='display table table-striped table-hover w-100'>
               <thead>
