--- a/views/pages/warehouse/manifest/incoming.ejs
+++ b/views/pages/warehouse/manifest/incoming.ejs
@@ -6,7 +6,7 @@
         <div class="card-title"><%= title %></div>
         <a href='create' class='btn btn-primary btn-round float-right ml-md-auto'>Create Manifest</a>
       </div>
-      <div class="card-body">
+      <div class="card-body daterangepickerbody">
         <div class="table-responsive">
         <table class="display table table-striped table-hover dataTable manifest-table">
           <thead>
