--- a/views/shared/__sidebar.ejs
+++ b/views/shared/__sidebar.ejs
@@ -85,12 +85,7 @@
 						<p>Zones </p>
 					</a>
 				</li>
-				<li class="nav-item <% if (page.includes('/invoices/')) { %> active <% } %>">
-					<a href="/admin/invoices/list">
-						<i class="fa fa-shield-alt"></i>
-						<p>Invoices </p>
-					</a>
-				</li>
+				
 
 				<li class="nav-section">
 					<span class="sidebar-mini-icon">
@@ -119,7 +114,7 @@
 								</a>
 							</li>
 							<%}%>
-							<li <% if (page.includes('/fll/awb/no-docs')) { %> class="active" <% } %>>
+							<!--<li <% if (page.includes('/fll/awb/no-docs')) { %> class="active" <% } %>>
 								<a href="/warehouse/fll/awb/no-docs">
 									<span class="sub-item">No Docs</span>
 								</a>
@@ -133,7 +128,7 @@
 								<a href="/warehouse/fll/package/list">
 									<span class="sub-item">Packages on Hands</span>
 								</a>
-							</li>
+							</li>--->
 							<% if (user.roles[0].type != "Custom Agent") { %>
 							<li <% if (page.includes('/fll/manifest/list')) { %> class="active" <% } %>>
 								<a href="/warehouse/fll/manifest/list">
@@ -141,11 +136,11 @@
 								</a>
 							</li>
 							<%}%>
-							<li <% if (page.includes('/fll/package/overviewfll/list')) { %> class="active" <% } %>>
+							<!--<li <% if (page.includes('/fll/package/overviewfll/list')) { %> class="active" <% } %>>
 								<a href="/warehouse/fll/package/overviewfll/list">
 									<span class="sub-item">Overview FLL</span>
 								</a>
-							</li>
+							</li>-->
 						</ul>
 					</div>
 				</li>
@@ -157,7 +152,7 @@
 					</a>
 					<div class="collapse <% if (page.includes('/nas/')) { %> show <% } %>" id="warehouse-nas">
 						<ul class="nav nav-collapse">
-							<li <% if (page.includes('/nas/awb/no-docs')) { %> class="active" <% } %>>
+							<!--<li <% if (page.includes('/nas/awb/no-docs')) { %> class="active" <% } %>>
 								<a href="/warehouse/nas/awb/no-docs">
 									<span class="sub-item">No Docs</span>
 								</a>
@@ -166,7 +161,7 @@
 								<a href="/warehouse/fll/awb/no-docs-packages">
 									<span class="sub-item">No Docs - Pkgs</span>
 								</a>
-							</li>
+							</li>-->
 							<% if (user.roles[0].type != "Custom Agent") { %>
 							<li <% if (page.includes('/nas/manifest/incoming')) { %> class="active" <% } %>>
 								<a href="/warehouse/nas/manifest/incoming">
@@ -174,7 +169,8 @@
 								</a>
 							</li>
 							<%}%>
-							<li <% if (page.includes('/nas/package/list')) { %> class="active" <% } %>>
+							
+							<!--<li <% if (page.includes('/nas/package/list')) { %> class="active" <% } %>>
 								<a href="/warehouse/nas/package/list">
 									<span class="sub-item">Packages on Hand</span>
 								</a>
@@ -208,7 +204,7 @@
 								<a href="/warehouse/package/list/in-manifest-no-docs">
 									<span class="sub-item">Packages in Manifest (no docs)</span>
 								</a>
-							</li>
+							</li>-->
 							<% if (user.roles[0].type != "Custom Agent") { %>
 							<li <% if (page.includes('/nas/delivery/list')) { %> class="active" <% } %>>
 								<a href="/warehouse/nas/delivery/list">
@@ -225,8 +221,14 @@
 						</ul>
 					</div>
 				</li>
+				<li class="nav-item <% if (page.includes('/invoices/')) { %> active <% } %>">
+					<a href="/admin/invoices/list">
+						<i class="fa fa-shield-alt"></i>
+						<p>Invoices </p>
+					</a>
+				</li>
 				<!-- Store -->
-				<li class="nav-item">
+				<!--<li class="nav-item">
 					<a data-toggle="collapse" href="#stores">
 						<i class="fas fa-store"></i>
 						<p>Stores</p>
@@ -234,11 +236,11 @@
 					</a>
 					<div class="collapse" id="stores">
 						<ul class="nav nav-collapse">
-							<!-- <li>
+							 <li>
 								<a href="/store/store-packages">
 									<span class="sub-item">Package On Hand</span>
 								</a>
-							</li> -->
+							</li> 
 							<li>
 								<a href="/store/store-check-in">
 									<span class="sub-item">Package On Hand</span>
@@ -246,7 +248,7 @@
 							</li>
 						</ul>
 					</div>
-				</li>
+				</li>-->
 				<!-- Snapshot -->
 				<li class="nav-item <% if (page.includes('/snapshot/')) { %> active <% } %>">
 					<a data-toggle="collapse" href="#snapshot">
@@ -258,37 +260,37 @@
 						<ul class="nav nav-collapse">
 							<li <% if (page && page.endsWith && page.endsWith('/snapshot/awb/list?type=airwaybill')) { %> class="active" <% } %>>
 								<a href="/warehouse/snapshot/awb/list?type=airwaybill">
-									<span class="sub-item">Awb List</span>
+									<span class="sub-item">AWB</span>
 								</a>
 							</li>
 							<li <% if (page && page.endsWith && page.endsWith('/snapshot/awb/list?type=nodocs')) { %> class="active" <% } %>>
 								<a href="/warehouse/snapshot/awb/list?type=nodocs">
-									<span class="sub-item">No docs Awb List</span>
+									<span class="sub-item">No Docs AWB </span>
 								</a>
 							</li>
 							<li <% if (page && page.endsWith && page.endsWith('/snapshot/awb/list?type=pendingawb')) { %> class="active" <% } %>>
 								<a href="/warehouse/snapshot/awb/list?type=pendingawb">
-									<span class="sub-item">Pending Awb List</span>
+									<span class="sub-item">Pending AWB</span>
 								</a>
 							</li>
 							<li <% if (page && page.endsWith && page.endsWith('/snapshot/awb/list?type=awbpackage')) { %> class="active" <% } %>>
 								<a href="/warehouse/snapshot/awb/list?type=awbpackage">
-									<span class="sub-item">Awb Pickups List</span>
+									<span class="sub-item">AWB Pickups </span>
 								</a>
 							</li>
 							<li <% if (page && page.endsWith && page.endsWith('/snapshot/package/list')) { %> class="active" <% } %>>
 								<a href="/warehouse/snapshot/package/list">
-									<span class="sub-item">Package List</span>
+									<span class="sub-item">Packages</span>
 								</a>
 							</li>
 							<li <% if (page && page.endsWith && page.endsWith('/snapshot/package/list?customerId=load')) { %> class="active" <% } %>>
 								<a href="/warehouse/snapshot/package/list?customerId=load">
-									<span class="sub-item">Customer Package List</span>
+									<span class="sub-item">Customer Packages</span>
 								</a>
 							</li>
 							<li <% if (page && page.endsWith && page.endsWith('/snapshot/package/list?locationId=load')) { %> class="active" <% } %>>
 								<a href="/warehouse/snapshot/package/list?locationId=load">
-									<span class="sub-item">Location Package List</span>
+									<span class="sub-item">Location Packages</span>
 								</a>
 							</li>
 						</ul>
@@ -347,12 +349,12 @@
 					</a>
 				</li>
 				<%}%>
-				<li class="nav-item <% if (page.includes('/packages/')) { %> active <% } %>">
+				<!--<li class="nav-item <% if (page.includes('/packages/')) { %> active <% } %>">
 					<a href="/warehouse/package/list">
 						<i class="fa fa-cubes"></i>
 						<p>Packages </p>
 					</a>
-				</li>
+				</li>-->
 				<% if (user.roles[0].type != "Custom Agent") { %>
 				<li class="nav-item <% if (page.includes('/airline/')) { %> active <% } %>">
 					<a href="/warehouse/airline/list">
