--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -16,3 +16,14 @@
 	left: 50%;
 	transform: translate(-50%,-50%);
 }
+
+.buttons-csv:{
+    color: rgb(255, 255, 255);
+    background-color: rgb(0, 123, 255);
+    border-color: rgb(0, 123, 255);
+}
+.buttons-html5{
+    color: rgb(255, 255, 255);
+    background-color: rgb(0, 123, 255);
+    border-color: rgb(0, 123, 255);
+}
