--- a/views/pages/warehouse/awbprice/list-all.ejs
+++ b/views/pages/warehouse/awbprice/list-all.ejs
@@ -232,8 +232,15 @@
                   <div class="form-group form-show-validation row">
                     <label for="Freight" class="col-lg-3 col-md-4 col-sm-4 mt-sm-2 text-right">Freight </label>
                     <div class="col-lg-7 col-md-8 col-sm-8">
-                      <input type="number" class="form-control" id="Freight" name="Freight"
+                      <input type="number" disabled="true" class="form-control" id="Freight" name="Freight"
                         placeholder="Freight">
+                    </div>
+                  </div>
+
+                  <div class="form-group form-show-validation row">
+                    <label class="col-lg-4 col-md-4 col-sm-4 mt-sm-2 text-right">Override Freight </label>
+                    <div class="col-lg-6 col-md-6 col-sm-6">
+                      <input type="number" id="override-freight" class="form-control"  placeholder="Override Freight">
                     </div>
                   </div>
                   <div class="form-group form-show-validation row">
@@ -255,8 +262,15 @@
                         <label class="custom-control-label" for="Insurance">Insurance</label>
                       </div>
                       <div class="col-lg-7 col-md-8 col-sm-8">
-                        <input type="number" class="form-control form-control-sm text-right" id="InsuranceVal" />
+                        <input type="number" disabled="true" class="form-control form-control-sm text-right" id="InsuranceVal" />
                       </div>
+                    </div>
+                  </div>
+
+                  <div class="form-group form-show-validation row">
+                    <label class="col-lg-4 col-md-4 col-sm-4 mt-sm-2 text-right">Override Insurance </label>
+                    <div class="col-lg-6 col-md-6 col-sm-6">
+                      <input type="number" id="override-insurance" class="form-control"  placeholder="Override Insurance">
                     </div>
                   </div>
                   <div class="form-group form-show-validation row">
